--- a/index.html
+++ b/index.html
@@ -4,17 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juan Trasobares - Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Navigation -->
-    <nav>
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="#">Juan Trasobares</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
     <!-- Hero/Intro Section -->
     <section id="hero">
@@ -53,7 +62,42 @@
             <p><strong>Technologies:</strong> TBD</p>
             <a href="#">Coming Soon</a>
         </div>
+
+        
     </section>
+
+    <section class="py-3">
+        <div class="container border rounded bg-light">
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <h1 class="text-center">WORDLE game</h1>
+                    <p class="container border rounded text-center p-2 bg-white">Interactive word-guessing game built with HTML, CSS, and JavaScript. Features keyboard input and color-coded feedback, as well as randomized word selection.   </p>
+                    <a href="/wordle/index.html" class="btn btn-primary d-block mx-auto" style="width: fit-content;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-code-xml-icon lucide-code-xml mr-2"><path d="m18 16 4-4-4-4"/><path d="m6 8-4 4 4 4"/><path d="m14.5 4-5 16"/></svg>
+                        View Project
+                    </a>
+                </div>
+                <div class="col-lg-6">
+                    <img src="img/wordle-project.png" class="img-fluid my-3 rounded">
+                </div>
+            </div>
+        </div>
+        <div class="container border rounded mt-5 bg-light">
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <h1 class="text-center">PaymentTracker</h1>
+                    <p class="container border rounded text-center p-2 bg-white">Web app created to keep track of activity payments by user and activity. Retrieving information from the email server and scraping the info to get insights on payment trends.</p>
+                    <a href="https://github.com/juanito2110/PaymentTracker" class="btn btn-primary d-block mx-auto" style="width: fit-content;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-code-xml-icon lucide-code-xml mr-2"><path d="m18 16 4-4-4-4"/><path d="m6 8-4 4 4 4"/><path d="m14.5 4-5 16"/></svg>
+                        View Project
+                    </a>
+                </div>
+                <div class="col-lg-6">
+                    <img src="img/PaymentTracker-project.png" class="img-fluid my-5 rounded">
+                </div>
+            </div>
+        </div>
+    </section>  
 
     <!-- Contact Section -->
     <section id="contact">
@@ -67,5 +111,7 @@
     <footer>
         <p>&copy; 2024 Juan Trasobares. Built with HTML, CSS, and Bootstrap.</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
